Fixed the animation overlap issue, and improved recording capabilities
Added improvements in vectorAnim.js and corrections in baseGraphics.js

--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@
     font-family: 'CMU Serif';
     src: url('./src/RMathAnim/cmunbi.ttf');
 }
+
+body {
+    border: 0px;
+    margin: 0px;
+    padding: 0px;
+}
